--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -26,19 +26,6 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="addEntityButton">
-    <property name="geometry">
-     <rect>
-      <x>920</x>
-      <y>120</y>
-      <width>231</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Добавить сущность</string>
-    </property>
-   </widget>
    <widget class="QWidget" name="widget" native="true">
     <property name="geometry">
      <rect>
@@ -49,47 +36,259 @@
      </rect>
     </property>
    </widget>
-   <widget class="QLineEdit" name="entityNameEdit">
+   <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
-      <x>930</x>
-      <y>100</y>
-      <width>211</width>
-      <height>21</height>
+      <x>910</x>
+      <y>20</y>
+      <width>261</width>
+      <height>491</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QComboBox" name="entitySelector">
-    <property name="geometry">
-     <rect>
-      <x>930</x>
-      <y>160</y>
-      <width>211</width>
-      <height>26</height>
-     </rect>
+    <property name="currentIndex">
+     <number>1</number>
     </property>
+    <widget class="QWidget" name="entityTab">
+     <attribute name="title">
+      <string>Сущность</string>
+     </attribute>
+     <widget class="QComboBox" name="entitySelector">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>20</y>
+        <width>231</width>
+        <height>26</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="addEntityButton">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>370</y>
+        <width>241</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Добавить сущность</string>
+      </property>
+      <property name="flat">
+       <bool>false</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>0</y>
+        <width>221</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Тип сущности</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>50</y>
+        <width>221</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Наименование сущности</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="entityName">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>70</y>
+        <width>231</width>
+        <height>21</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_3">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>100</y>
+        <width>221</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Оплата работы в час</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="priceEntity">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>120</y>
+        <width>231</width>
+        <height>21</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="deleteEntityButton">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>430</y>
+        <width>241</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Удалить сущность</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="updateEntityButton">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>400</y>
+        <width>241</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Обновить сущность</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="workTab">
+     <attribute name="title">
+      <string>Задача</string>
+     </attribute>
+     <widget class="QComboBox" name="fromEntitySelector">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>30</y>
+        <width>231</width>
+        <height>26</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="toEntitySelector">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>80</y>
+        <width>231</width>
+        <height>26</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_4">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>10</y>
+        <width>131</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>От сущности</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_5">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>60</y>
+        <width>161</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>К сущности</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_6">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>110</y>
+        <width>201</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Наименование задачи</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="workNameEdit">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>130</y>
+        <width>231</width>
+        <height>21</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_7">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>160</y>
+        <width>171</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Описание задачи</string>
+      </property>
+     </widget>
+     <widget class="QPlainTextEdit" name="plainTextEdit">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>180</y>
+        <width>231</width>
+        <height>151</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="addTaskButton">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>390</y>
+        <width>231</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Добавить задачу</string>
+      </property>
+     </widget>
+    </widget>
    </widget>
    <widget class="QLineEdit" name="taskNameEdit">
     <property name="geometry">
      <rect>
-      <x>930</x>
-      <y>190</y>
+      <x>910</x>
+      <y>520</y>
       <width>211</width>
       <height>21</height>
      </rect>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="addTaskButton">
-    <property name="geometry">
-     <rect>
-      <x>930</x>
-      <y>210</y>
-      <width>211</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Добавить задачу</string>
     </property>
    </widget>
   </widget>
