--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -46,7 +46,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>2</number>
     </property>
     <widget class="QWidget" name="entityTab">
      <attribute name="title">
@@ -174,7 +174,7 @@
      <attribute name="title">
       <string>Задача</string>
      </attribute>
-     <widget class="QComboBox" name="fromEntitySelector">
+     <widget class="QComboBox" name="toEntitySelector">
       <property name="geometry">
        <rect>
         <x>10</x>
@@ -184,34 +184,11 @@
        </rect>
       </property>
      </widget>
-     <widget class="QComboBox" name="toEntitySelector">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>80</y>
-        <width>231</width>
-        <height>26</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_4">
-      <property name="geometry">
-       <rect>
-        <x>20</x>
-        <y>10</y>
-        <width>131</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>От сущности</string>
-      </property>
-     </widget>
      <widget class="QLabel" name="label_5">
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>60</y>
+        <y>10</y>
         <width>161</width>
         <height>16</height>
        </rect>
@@ -224,7 +201,7 @@
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>110</y>
+        <y>60</y>
         <width>201</width>
         <height>16</height>
        </rect>
@@ -237,7 +214,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>130</y>
+        <y>80</y>
         <width>231</width>
         <height>21</height>
        </rect>
@@ -279,17 +256,68 @@
        <string>Добавить задачу</string>
       </property>
      </widget>
+     <widget class="QLineEdit" name="workTimeEdit">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>130</y>
+        <width>231</width>
+        <height>21</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_8">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>110</y>
+        <width>201</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Продолжительность работы</string>
+      </property>
+     </widget>
     </widget>
-   </widget>
-   <widget class="QLineEdit" name="taskNameEdit">
-    <property name="geometry">
-     <rect>
-      <x>910</x>
-      <y>520</y>
-      <width>211</width>
-      <height>21</height>
-     </rect>
-    </property>
+    <widget class="QWidget" name="tab">
+     <attribute name="title">
+      <string>Связь</string>
+     </attribute>
+     <widget class="QComboBox" name="fromWorkSelector">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>30</y>
+        <width>221</width>
+        <height>26</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="toWorkSelector">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>60</y>
+        <width>221</width>
+        <height>26</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="addSequenceButon">
+      <property name="geometry">
+       <rect>
+        <x>80</x>
+        <y>190</y>
+        <width>115</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>PushButton</string>
+      </property>
+     </widget>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -301,6 +329,18 @@
      <height>22</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menu">
+    <property name="title">
+     <string>Открыть</string>
+    </property>
+   </widget>
+   <widget class="QMenu" name="menu_2">
+    <property name="title">
+     <string>Сохранить</string>
+    </property>
+   </widget>
+   <addaction name="menu"/>
+   <addaction name="menu_2"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
@@ -311,6 +351,11 @@
    </attribute>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <action name="action_2">
+   <property name="text">
+    <string>ыфв</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
