--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -25,6 +25,10 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../../Downloads/vovka_32787390_orig_.jpeg</normaloff>../../Downloads/vovka_32787390_orig_.jpeg</iconset>
+  </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QWidget" name="widget" native="true">
     <property name="geometry">
@@ -46,7 +50,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="entityTab">
      <attribute name="title">
@@ -298,7 +302,7 @@
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>60</y>
+        <y>80</y>
         <width>221</width>
         <height>26</height>
        </rect>
@@ -307,14 +311,40 @@
      <widget class="QPushButton" name="addSequenceButon">
       <property name="geometry">
        <rect>
-        <x>80</x>
-        <y>190</y>
-        <width>115</width>
+        <x>60</x>
+        <y>170</y>
+        <width>141</width>
         <height>32</height>
        </rect>
       </property>
       <property name="text">
-       <string>PushButton</string>
+       <string>Добавить связь</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_4">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>10</y>
+        <width>59</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>От</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_9">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>60</y>
+        <width>59</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>К</string>
       </property>
      </widget>
     </widget>
@@ -339,7 +369,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>Генерация отчета</string>
     </property>
    </widget>
    <widget class="QPushButton" name="loadButton">
@@ -368,28 +398,6 @@
      <string>Сохранить</string>
     </property>
    </widget>
-  </widget>
-  <widget class="QMenuBar" name="menuBar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>1400</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <widget class="QMenu" name="menu">
-    <property name="title">
-     <string>Открыть</string>
-    </property>
-   </widget>
-   <widget class="QMenu" name="menu_2">
-    <property name="title">
-     <string>Сохранить</string>
-    </property>
-   </widget>
-   <addaction name="menu"/>
-   <addaction name="menu_2"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
